Archive/0b8f0b10bfa49a499bdc44038f31357c-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:22:29: error: specialization of ‘N::A<int>’ after instantiation
 /* V2: */ template<> struct A<int>;
                             ^
